Fix post icon mobile

--- a/resources/css/components/post.scss
+++ b/resources/css/components/post.scss
@@ -173,11 +173,14 @@
             grid-template-columns: auto 1fr; //Hide arrow
             gap: 12px 0;
 
-            .thumbnail {
+            a.thumbnail {
                 grid-row: 1 / span 2;
-                width: 48px;
-                height: 48px;
                 margin-right: min(4vw, 20px);
+
+                img {
+                    width: 48px;
+                    height: 48px;
+                }
             }
 
             .details {
@@ -209,9 +212,11 @@
 @media screen and (max-width: 480px) {
     .post {
         .header {
-            .thumbnail {
+            a.thumbnail {
                 grid-row: 1;
             }
+
+
 
             .tags {
                 grid-column: 1 / span 2;
